Finished creating kimchi.html recipe adding in an image of kimchi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/kimchi.html">Kimchi</a>
+        <ul>
+            <li><a href="recipes/kimchi.html">Kimchi</a></li>
+        </ul>
+        
     </body>
 
 </html>
