--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/kimchi.html">Kimchi</a></li>
+            <li><a href="recipes/japchae.html">Japchae</a></li>
+            <li><a href="recipes/tteokbokki.html">Tteokbokki</a></li>
         </ul>
         
     </body>
